tweak - reset scrollposition when page changes on work page fix - netlify page directory fix fix - about page slider icon misalignment on mobile

--- a/src/Style/About.scss
+++ b/src/Style/About.scss
@@ -109,6 +109,10 @@
           border: 1px solid var(--border);
           border-radius: calc(var(--bRadius) * 4);
           background-color: white;
+          font-weight: bolder;
+          vertical-align: middle;
+          font-size: larger;
+          line-height: 1;
         }
       }
 
